--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="public/sushi-9.png" type="image/png" />
     <title>Sushi Man</title>
+   
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <nav class="header__nav">
         <div class="header__logo">
-          <h4>SUSHIMAN</h4>
+          <h4 data-aos="fade-down">SUSHIMAN</h4>
           <div class="header__logo-overlay"></div>
         </div>
 
-        <ul class="header__menu">
+        <ul class="header__menu" data-aos="fade-down">
           <li>
             <a href="#menu">Menu</a>
           </li>
@@ -34,7 +37,7 @@
         </ul>
 
         <!-- us for mobile devices -->
-        <ul class="header__menu-mobile">
+        <ul class="header__menu-mobile" data-aos="fade-down">
           <li>
             <img src="assets//menu.svg" alt="menu" />
           </li>
@@ -44,8 +47,8 @@
 
     <section class="hero">
       <div class="hero-image">
-        <img src="assets/sushi-1.png" alt="sushi" />
-        <h2>
+        <img data-aos="fade-up" src="assets/sushi-1.png" alt="sushi" />
+        <h2 data-aos="fade-up">
           日 <br />
           本 <br />
           食
@@ -55,7 +58,7 @@
       </div>
 
       <div class="hero-content">
-        <div class="hero-content-info">
+        <div data-aos="fade-left" class="hero-content-info">
           <h1>Feel the taste of japanese food</h1>
           <p>
             Feel the taste of the most popular japanese food from anywhere and
@@ -71,7 +74,7 @@
           </div>
         </div>
 
-        <div class="hero-content__testimonial">
+        <div data-aos="fade-up" class="hero-content__testimonial">
           <div class="hero-content__customer flex-center">
             <h4>24 <span>k+</span></h4>
 
@@ -88,7 +91,7 @@
     <section class="about-us" id="about-us">
       <div class="about-us__image">
         <div class="about-us__image-sushi3">
-          <img src="assets/sushi-3.png" alt="sushi 3" />
+          <img src="assets/sushi-3.png" alt="sushi 3" data-aos="fade-right"/>
         </div>
 
         <button class="about-us__button">
@@ -98,11 +101,11 @@
         </button>
 
         <div class="about-us__image-sushi2">
-          <img src="assets/sushi-2.png" alt="sushi 2" />
+          <img src="assets/sushi-2.png" alt="sushi 2" data-aos="fade-right"/>
         </div>
       </div>
 
-      <div class="about-us__content">
+      <div class="about-us__content" data-aos="fade-left">
         <p class="sushi__subtitle">About Us / 私たちに関しては</p>
         <h3 class="sushi__title">
           Our mission is to bring true Japanese flavours to you.
@@ -115,6 +118,83 @@
       </div>
     </section>
 
+    <section class="popular-foods" id="menu">
+        <h2 data-aos="flip-up" class="popular-foods__title"> Popular Food / 人気</h2>
+        <div data-aos="fade-up" class="popular-foods__filter sushi__hide-scrollbar">
+          <button class="popular-foods__filter-btn active">
+            All
+          </button>
+
+          <button class="popular-foods__filter-btn">
+            <img src="/assets/sushi-9.png" alt="sushi-9">
+            Sushi
+          </button>
+          <button class="popular-foods__filter-btn">
+            <img src="/assets/sushi-8.png" alt="sushi-9">
+            Ramen
+          </button>
+          <button class="popular-foods__filter-btn">
+            <img src="/assets/sushi-7.png" alt="sushi-9">
+            Udon
+          </button>
+          <button class="popular-foods__filter-btn">
+            <img src="/assets/sushi-6.png" alt="sushi-9">
+            Danggo
+          </button>
+
+          <button class="popular-foods__filter-btn">
+           Others
+          </button>
+        </div>
+
+
+        <div class="popular-foods__catalogue">
+          <article data-aos="fade-up" class="popular-foods__card">
+            <img src="assets/sushi-12.png" alt="sushi 12" class="popular-foods__card-image">
+            <h4 class="popular-foods__card-title">Chezu sushi</h4>
+            <div class="popular-foods__card-details flex-between">
+              <div class="popular-foods__card-rating">
+                <img src="assets/star.svg" alt="star">
+                <p>4.9</p>
+              </div>
+
+              <p class="popular-foods__card-price">$21.00</p>
+            </div>
+          </article>
+
+
+          <article data-aos="fade-up" class="popular-foods__card active-card">
+            <img src="assets/sushi-11.png" alt="sushi 11" class="popular-foods__card-image">
+            <h4 class="popular-foods__card-title">Original sushi</h4>
+            <div class="popular-foods__card-details flex-between">
+              <div class="popular-foods__card-rating">
+                <img src="assets/star.svg" alt="star">
+                <p>5.0</p>
+              </div>
+
+              <p class="popular-foods__card-price">$19.00</p>
+            </div>
+          </article>
+          <article data-aos="fade-up" class="popular-foods__card">
+            <img src="assets/sushi-10.png" alt="sushi 10" class="popular-foods__card-image">
+            <h4 class="popular-foods__card-title">Ramen Legendo</h4>
+            <div class="popular-foods__card-details flex-between">
+              <div class="popular-foods__card-rating">
+                <img src="assets/star.svg" alt="star">
+                <p>4.7</p>
+              </div>
+
+              <p class="popular-foods__card-price">$13.00</p>
+            </div>
+          </article>
+        </div>
+
+        <div class="popular-foods__button">
+          Explore Food
+          <img src="/assets/arrow-right.svg" alt="arrow-right">
+        </div>
+      </section>
+      
     <script src="js/script.js" type="module"></script>
   </body>
 </html>
