--- a/index.html
+++ b/index.html
@@ -194,6 +194,68 @@
           <img src="/assets/arrow-right.svg" alt="arrow-right">
         </div>
       </section>
+
+<!-- <section class="trending">
+  <div data-aos="fade-right" class="trending__content">
+      <p class="sushi__subtitle">
+        What's Trending / トレンド
+      </p>
+      <h3 class="sushi__title">
+        Japanese Sushi
+      </h3>
+    <p class="sushi__description">
+      Feel the taste of the most delicious Sushi here.
+    </p>
+
+    <ul class="trending__list flex-between">
+
+
+      <li>
+        <div class="trending__icon flex-center">
+          <img src="assets/check.svg" alt="check">
+        </div>
+        <p>Make Sushi</p>
+      </li>
+
+      <li>
+        <div class="trending__icon flex-center">
+          <img src="assets/check.svg" alt="check">
+        </div>
+        <p>Oshizushi</p>
+      </li><li>
+        <div class="trending__icon flex-center">
+          <img src="assets/check.svg" alt="check">
+        </div>
+        <p>Urumaki Sushi</p>
+      </li><li>
+        <div class="trending__icon flex-center">
+          <img src="assets/check.svg" alt="check">
+        </div>
+        <p>Nigiri Sushi</p>
+      </li><li>
+        <div class="trending__icon flex-center">
+          <img src="assets/check.svg" alt="check">
+        </div>
+        <p>Temaki Sushi</p>
+      </li><li>
+        <div class="trending__icon flex-center">
+          <img src="assets/check.svg" alt="check">
+        </div>
+        <p>Inari Sushi</p>
+      </li>
+    </ul>
+  </div>
+
+  <div class="trending__image flex-center">
+    <img data-aos="fade-left" src="assets/sushi-5.png" alt="sushi 5">
+
+
+    <div class="trending__arrow trending__arrow-left">
+
+    </div>
+
+  </div>
+</section> -->
       
     <script src="js/script.js" type="module"></script>
   </body>
