--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </button>
           <button class="popular-foods__filter-btn">
             <img src="/assets/sushi-7.png" alt="sushi-9">
-            Udon
+            Biryani
           </button>
           <button class="popular-foods__filter-btn">
             <img src="/assets/sushi-6.png" alt="sushi-9">
